--- a/thanhtoan50k.html
+++ b/thanhtoan50k.html
@@ -6,13 +6,11 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
     <script>
-        // Cấu hình Firebase Project của bạn
-        // LƯU Ý QUAN TRỌNG: Bạn sẽ lấy cấu hình này từ Firebase Console của project của mình
-        // Đi tới Project settings (biểu tượng bánh răng cưa) -> Your apps -> Web app
+
         const firebaseConfig = {
             apiKey: "YOUR_API_KEY",
             authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "tru-bom-xang-tu-dong", // Đây là Project ID của bạn!
+            projectId: "tru-bom-xang-tu-dong",
             storageBucket: "YOUR_STORAGE_BUCKET",
             messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
             appId: "YOUR_APP_ID",
@@ -25,15 +23,13 @@
 
         // Hàm để cập nhật giá trị
         function updateThanhToan() {
-            // IMPORTANT: Before updating, you should consider adding Firebase Authentication
-            // to ensure only authorized users/devices can trigger this update.
-            // For demonstration, we're directly updating.
+           
 
             const thanhToanRef = database.ref('thanh_toan_50k'); // Đường dẫn đến node 'thanh toan'
 
             thanhToanRef.set(1)
                 .then(() => {
-                    document.getElementById('status').innerText = 'Thanh toán đã được cập nhật thành 1 thành công!';
+                    document.getElementById('status').innerText = 'Thanh toán đã được cập nhật thành công!';
                     console.log("Giá trị 'thanh_toan_50k' đã được cập nhật thành 1.");
                 })
                 .catch((error) => {
