--- a/thanhtoan100k.html
+++ b/thanhtoan100k.html
@@ -34,7 +34,7 @@
                 })
                 .catch((error) => {
                     document.getElementById('status').innerText = 'Lỗi khi cập nhật thanh toán: ' + error.message;
-                    console.error("Lỗi khi cập nhật giá trị thanh toán:", error);
+                    console.error("Lỗi khi cập nhật giá trị 'thanh_toan_100k':", error);
                 });
         }
 
